# news-rss

./: .env  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml
.github/workflows/: pull-request.yml  release.yml
.sqlx/: query-1da19670bf2c45acb42e3dfbad6c57533be910ea49bd7e7ff5ef936c031cb6b8.json  query-44fa8db07d271101a8ae45e8faa929abd9afa6f48ecd584018e3dbd9b812fd08.json  query-78435cd0a686b13f8ace8122c2eab93f82d233f6d2aff8b06b8d2cd88d83ab36.json  query-791d6ca0f770f7be71a7daef8cc24c5fde8d21b27c32b0ea89eae63fcfaa8211.json  query-9c7a9b74dbf9019880f6a47398141de5800a169358b353031efcfac3f117509c.json  query-deed1b6c34f5daac0606b73033d328bf82882308d099105b2d071f700b1c5bdd.json
config/: development.toml  production.toml
migrations/: 20241025113450_init.down.sql  20241025113450_init.up.sql  20241111105852_add-rss-sources.down.sql  20241111105852_add-rss-sources.up.sql
src/: config.rs  lib.rs  logger.rs
src/cache/: config.rs  error.rs  mod.rs
src/cache/local/: config.rs  mod.rs
src/cache/redis/: config.rs  mod.rs  (+1 more)
src/crawler/: config.rs  mod.rs
src/feeds/: config.rs  mod.rs
src/publish/: config.rs  mod.rs  models.rs
src/server/: config.rs  errors.rs  forms.rs  mod.rs  routers.rs  swagger.rs
src/storage/: config.rs  mod.rs
tests/: test_crawler_llm.rs  test_json_repair.rs  test_publish_feeds.rs  test_publish_pgsql.rs  test_publish_rmq.rs  test_storage_pgsql.rs  tests_helper.rs
tests/mocks/: mock_rmq_publish.rs  mod.rs
tests/resources/: cnn-news-llm-resp.txt  cnn-news.html  cnn-text-llm-resp.txt  llm-chat-response-assert.txt  llm-chat-response.json  ndtv-news-html-item.html  ndtv-news-llm-resp.txt  ndtv-news.html  ndtv-world-news.xml
(+30 files in other folders)
