[package]
name = "news-rss"
version = "0.1.0"
edition = "2021"

[features]
cache-redis = ["dep:redis"]
publish-offline = ["dep:sqlx"]
crawler-llm = ["dep:openai_dive", "dep:html2text"]
default = []

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
config = "^0.14"
derive_builder = "^0.20"
escape_string = "^0.1"
getset = "^0.1"
lapin = "^2.5"
regex = "1.11.0"
reqwest-middleware = "^0.3"
reqwest-retry = "^0.6"
rss = "^2.0"
serde_json = "^1.0"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"
console-subscriber = "^0.4"
url-builder = "^0.1"

[dependencies.axum]
version = "^0.7"
features = ["tracing", "tower-log"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.html2text]
optional = true
version = "^0.13"

[dependencies.moka]
version = "^0.12"
features = ["future"]

[dependencies.openai_dive]
optional = true
version = "^0.6"

[dependencies.redis]
optional = true
version = "^0.27"
features = ["aio", "tokio-comp", "connection-manager", "serde_json", "json"]

[dependencies.reqwest]
version = "^0.12"
features = ["json"]

[dependencies.serde]
version = "^1.0"
features = ["derive", "serde_derive"]

[dependencies.sqlx]
optional = true
version = "^0.7"
features = ["postgres", "runtime-tokio", "chrono"]

[dependencies.tokio]
version = "^1.38"
features = ["full"]

[dependencies.tower-http]
version = "^0.6"
features = ["trace"]

[dependencies.utoipa]
version = "^5.1"
features = ["axum_extras", "chrono"]

[dependencies.utoipa-swagger-ui]
version = "^8.0"
features = ["axum"]

[dev-dependencies]
lazy_static = "^1.5"
wiremock = "^0.6"

[[bin]]
name = "news-rss"
path = "src/bin/main.rs"
